--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/styles/global.css" rel="stylesheet">
     <title>Alisson Oliveira</title>
   </head>
-  <body>
+  <body class="p-0 m-0 bg-amber-950">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
