--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alisson Oliveira</title>
   </head>
-  <body class="p-0 m-0 bg-amber-950">
+  <body class="p-0 m-0 bg-gray-950">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
