fix: adjusts in color scheme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Alisson Oliveira</title>
   </head>
-  <body class="p-0 m-0 bg-gray-950 text-white poppins-regular">
+  <body class="p-0 m-0 bg-neutral-950 text-white poppins-regular">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
