--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Alisson Oliveira</title>
   </head>
-  <body class="p-0 m-0 bg-neutral-950 text-white poppins-regular">
+  <body class="p-0 m-0 bg-neutral-950 text-white font-[Inter]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
