--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Alisson Oliveira</title>
   </head>
-  <body class="p-0 m-0 bg-neutral-950 text-white font-[Inter]">
+  <body class="p-0 m-0 bg-neutral-950 text-white font-[HelveticaNow]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
